front/parser/.antlr/ScriptBlockParser.java
// Generated from c:\Falcinspire\go\src\github.com\falcinspire\scriptblock\front\parser\ScriptBlockParser.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ScriptBlockParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, COMMENT=2, DOC_START=3, DOC_END=4, DOC_LINE=5, NEWLINES=6, FUNCTION=7, 
		TEMPLATE=8, NATIVE=9, CONSTANT=10, RUN=11, DELAY=12, IMPORT=13, INTERNAL=14, 
		ARROW=15, OPAREN=16, CPAREN=17, OCURLY=18, CCURLY=19, OSQUARE=20, CSQUARE=21, 
		COMMA=22, EQUALS=23, SEMICOLON=24, COLON=25, POWER=26, MULTIPLY=27, DIVIDE=28, 
		INTEGER_DIVIDE=29, PLUS=30, SUBTRACT=31, DOT=32, GREATER_THAN=33, LESS_THAN=34, 
		POUND=35, IDENTIFIER=36, SIGN=37, DIGITS=38, STRING=39;
	public static final int
		RULE_unit = 0, RULE_documentation = 1, RULE_parameterList = 2, RULE_argumentList = 3, 
		RULE_structureList = 4, RULE_nativeCall = 5, RULE_functionCall = 6, RULE_functionFrame = 7, 
		RULE_functionDefinition = 8, RULE_functionDefinitionShortcut = 9, RULE_tag = 10, 
		RULE_templateDefinition = 11, RULE_constantDefinition = 12, RULE_formatter = 13, 
		RULE_importLine = 14, RULE_topDefinition = 15, RULE_statement = 16, RULE_delayStructure = 17, 
		RULE_expression = 18, RULE_number = 19;
	public static final String[] ruleNames = {
		"unit", "documentation", "parameterList", "argumentList", "structureList", 
		"nativeCall", "functionCall", "functionFrame", "functionDefinition", "functionDefinitionShortcut", 
		"tag", "templateDefinition", "constantDefinition", "formatter", "importLine", 
		"topDefinition", "statement", "delayStructure", "expression", "number"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "'/*'", "'*/'", null, null, "'func'", "'script'", "'command'", 
		"'const'", "'run'", "'delay'", "'import'", "'internal'", "'->'", "'('", 
		"')'", "'{'", "'}'", "'['", "']'", "','", "'='", "';'", "':'", "'^'", 
		"'*'", "'/'", "'//'", "'+'", "'-'", "'.'", "'>'", "'<'", "'#'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WS", "COMMENT", "DOC_START", "DOC_END", "DOC_LINE", "NEWLINES", 
		"FUNCTION", "TEMPLATE", "NATIVE", "CONSTANT", "RUN", "DELAY", "IMPORT", 
		"INTERNAL", "ARROW", "OPAREN", "CPAREN", "OCURLY", "CCURLY", "OSQUARE", 
		"CSQUARE", "COMMA", "EQUALS", "SEMICOLON", "COLON", "POWER", "MULTIPLY", 
		"DIVIDE", "INTEGER_DIVIDE", "PLUS", "SUBTRACT", "DOT", "GREATER_THAN", 
		"LESS_THAN", "POUND", "IDENTIFIER", "SIGN", "DIGITS", "STRING"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ScriptBlockParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ScriptBlockParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class UnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ScriptBlockParser.EOF, 0); }
		public List<ImportLineContext> importLine() {
			return getRuleContexts(ImportLineContext.class);
		}
		public ImportLineContext importLine(int i) {
			return getRuleContext(ImportLineContext.class,i);
		}
		public List<TerminalNode> NEWLINES() { return getTokens(ScriptBlockParser.NEWLINES); }
		public TerminalNode NEWLINES(int i) {
			return getToken(ScriptBlockParser.NEWLINES, i);
		}
		public List<TopDefinitionContext> topDefinition() {
			return getRuleContexts(TopDefinitionContext.class);
		}
		public TopDefinitionContext topDefinition(int i) {
			return getRuleContext(TopDefinitionContext.class,i);
		}
		public UnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unit; }
	}

	public final UnitContext unit() throws RecognitionException {
		UnitContext _localctx = new UnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_unit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(40);
				importLine();
				setState(41);
				match(NEWLINES);
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DOC_START) | (1L << FUNCTION) | (1L << TEMPLATE) | (1L << CONSTANT) | (1L << INTERNAL) | (1L << POUND))) != 0)) {
				{
				{
				setState(48);
				topDefinition();
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DocumentationContext extends ParserRuleContext {
		public TerminalNode DOC_START() { return getToken(ScriptBlockParser.DOC_START, 0); }
		public List<TerminalNode> NEWLINES() { return getTokens(ScriptBlockParser.NEWLINES); }
		public TerminalNode NEWLINES(int i) {
			return getToken(ScriptBlockParser.NEWLINES, i);
		}
		public TerminalNode DOC_END() { return getToken(ScriptBlockParser.DOC_END, 0); }
		public List<TerminalNode> DOC_LINE() { return getTokens(ScriptBlockParser.DOC_LINE); }
		public TerminalNode DOC_LINE(int i) {
			return getToken(ScriptBlockParser.DOC_LINE, i);
		}
		public DocumentationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_documentation; }
	}

	public final DocumentationContext documentation() throws RecognitionException {
		DocumentationContext _localctx = new DocumentationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_documentation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(DOC_START);
			setState(57);
			match(NEWLINES);
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOC_LINE) {
				{
				{
				setState(58);
				match(DOC_LINE);
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			match(DOC_END);
			setState(65);
			match(NEWLINES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterListContext extends ParserRuleContext {
		public TerminalNode OPAREN() { return getToken(ScriptBlockParser.OPAREN, 0); }
		public TerminalNode CPAREN() { return getToken(ScriptBlockParser.CPAREN, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(ScriptBlockParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ScriptBlockParser.IDENTIFIER, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ScriptBlockParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ScriptBlockParser.COMMA, i);
		}
		public ParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterList; }
	}

	public final ParameterListContext parameterList() throws RecognitionException {
		ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_parameterList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(OPAREN);
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(68);
				match(IDENTIFIER);
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(69);
					match(COMMA);
					setState(70);
					match(IDENTIFIER);
					}
					}
					setState(75);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(78);
			match(CPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentListContext extends ParserRuleContext {
		public TerminalNode OPAREN() { return getToken(ScriptBlockParser.OPAREN, 0); }
		public TerminalNode CPAREN() { return getToken(ScriptBlockParser.CPAREN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ScriptBlockParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ScriptBlockParser.COMMA, i);
		}
		public ArgumentListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argumentList; }
	}

	public final ArgumentListContext argumentList() throws RecognitionException {
		ArgumentListContext _localctx = new ArgumentListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_argumentList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(OPAREN);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RUN) | (1L << OPAREN) | (1L << LESS_THAN) | (1L << IDENTIFIER) | (1L << SIGN) | (1L << DIGITS) | (1L << STRING))) != 0)) {
				{
				setState(81);
				expression(0);
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(82);
					match(COMMA);
					setState(83);
					expression(0);
					}
					}
					setState(88);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(91);
			match(CPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructureListContext extends ParserRuleContext {
		public TerminalNode OSQUARE() { return getToken(ScriptBlockParser.OSQUARE, 0); }
		public TerminalNode CSQUARE() { return getToken(ScriptBlockParser.CSQUARE, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ScriptBlockParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ScriptBlockParser.COMMA, i);
		}
		public StructureListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structureList; }
	}

	public final StructureListContext structureList() throws RecognitionException {
		StructureListContext _localctx = new StructureListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_structureList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(OSQUARE);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RUN) | (1L << OPAREN) | (1L << LESS_THAN) | (1L << IDENTIFIER) | (1L << SIGN) | (1L << DIGITS) | (1L << STRING))) != 0)) {
				{
				setState(94);
				expression(0);
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(95);
					match(COMMA);
					setState(96);
					expression(0);
					}
					}
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(104);
			match(CSQUARE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NativeCallContext extends ParserRuleContext {
		public TerminalNode NATIVE() { return getToken(ScriptBlockParser.NATIVE, 0); }
		public ArgumentListContext argumentList() {
			return getRuleContext(ArgumentListContext.class,0);
		}
		public NativeCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nativeCall; }
	}

	public final NativeCallContext nativeCall() throws RecognitionException {
		NativeCallContext _localctx = new NativeCallContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_nativeCall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(NATIVE);
			setState(107);
			argumentList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionCallContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ScriptBlockParser.IDENTIFIER, 0); }
		public FunctionFrameContext functionFrame() {
			return getRuleContext(FunctionFrameContext.class,0);
		}
		public ArgumentListContext argumentList() {
			return getRuleContext(ArgumentListContext.class,0);
		}
		public FunctionCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionCall; }
	}

	public final FunctionCallContext functionCall() throws RecognitionException {
		FunctionCallContext _localctx = new FunctionCallContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionCall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(IDENTIFIER);
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OPAREN:
				{
				{
				setState(110);
				argumentList();
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==OCURLY) {
					{
					setState(111);
					functionFrame();
					}
				}

				}
				}
				break;
			case OCURLY:
				{
				setState(114);
				functionFrame();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionFrameContext extends ParserRuleContext {
		public TerminalNode OCURLY() { return getToken(ScriptBlockParser.OCURLY, 0); }
		public TerminalNode NEWLINES() { return getToken(ScriptBlockParser.NEWLINES, 0); }
		public TerminalNode CCURLY() { return getToken(ScriptBlockParser.CCURLY, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(ScriptBlockParser.ARROW, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FunctionFrameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionFrame; }
	}

	public final FunctionFrameContext functionFrame() throws RecognitionException {
		FunctionFrameContext _localctx = new FunctionFrameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_functionFrame);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(OCURLY);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPAREN) {
				{
				setState(118);
				parameterList();
				setState(119);
				match(ARROW);
				}
			}

			setState(123);
			match(NEWLINES);
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NATIVE) | (1L << DELAY) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(124);
				statement();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130);
			match(CCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefinitionContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(ScriptBlockParser.FUNCTION, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ScriptBlockParser.IDENTIFIER, 0); }
		public FunctionFrameContext functionFrame() {
			return getRuleContext(FunctionFrameContext.class,0);
		}
		public DocumentationContext documentation() {
			return getRuleContext(DocumentationContext.class,0);
		}
		public TagContext tag() {
			return getRuleContext(TagContext.class,0);
		}
		public TerminalNode INTERNAL() { return getToken(ScriptBlockParser.INTERNAL, 0); }
		public FunctionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefinition; }
	}

	public final FunctionDefinitionContext functionDefinition() throws RecognitionException {
		FunctionDefinitionContext _localctx = new FunctionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_functionDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOC_START) {
				{
				setState(132);
				documentation();
				}
			}

			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==POUND) {
				{
				setState(135);
				tag();
				}
			}

			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INTERNAL) {
				{
				setState(138);
				match(INTERNAL);
				}
			}

			setState(141);
			match(FUNCTION);
			setState(142);
			match(IDENTIFIER);
			setState(143);
			functionFrame();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefinitionShortcutContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(ScriptBlockParser.FUNCTION, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ScriptBlockParser.IDENTIFIER, 0); }
		public TerminalNode EQUALS() { return getToken(ScriptBlockParser.EQUALS, 0); }
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public DocumentationContext documentation() {
			return getRuleContext(DocumentationContext.class,0);
		}
		public TagContext tag() {
			return getRuleContext(TagContext.class,0);
		}
		public TerminalNode INTERNAL() { return getToken(ScriptBlockParser.INTERNAL, 0); }
		public FunctionDefinitionShortcutContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefinitionShortcut; }
	}

	public final FunctionDefinitionShortcutContext functionDefinitionShortcut() throws RecognitionException {
		FunctionDefinitionShortcutContext _localctx = new FunctionDefinitionShortcutContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_functionDefinitionShortcut);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOC_START) {
				{
				setState(145);
				documentation();
				}
			}

			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==POUND) {
				{
				setState(148);
				tag();
				}
			}

			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INTERNAL) {
				{
				setState(151);
				match(INTERNAL);
				}
			}

			setState(154);
			match(FUNCTION);
			setState(155);
			match(IDENTIFIER);
			setState(156);
			match(EQUALS);
			setState(157);
			functionCall();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TagContext extends ParserRuleContext {
		public TerminalNode POUND() { return getToken(ScriptBlockParser.POUND, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(ScriptBlockParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ScriptBlockParser.IDENTIFIER, i);
		}
		public TerminalNode COLON() { return getToken(ScriptBlockParser.COLON, 0); }
		public TagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tag; }
	}

	public final TagContext tag() throws RecognitionException {
		TagContext _localctx = new TagContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_tag);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(POUND);
			setState(160);
			match(IDENTIFIER);
			setState(161);
			match(COLON);
			setState(162);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TemplateDefinitionContext extends ParserRuleContext {
		public TerminalNode TEMPLATE() { return getToken(ScriptBlockParser.TEMPLATE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ScriptBlockParser.IDENTIFIER, 0); }
		public FunctionFrameContext functionFrame() {
			return getRuleContext(FunctionFrameContext.class,0);
		}
		public DocumentationContext documentation() {
			return getRuleContext(DocumentationContext.class,0);
		}
		public TerminalNode INTERNAL() { return getToken(ScriptBlockParser.INTERNAL, 0); }
		public TemplateDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_templateDefinition; }
	}

	public final TemplateDefinitionContext templateDefinition() throws RecognitionException {
		TemplateDefinitionContext _localctx = new TemplateDefinitionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_templateDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOC_START) {
				{
				setState(164);
				documentation();
				}
			}

			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INTERNAL) {
				{
				setState(167);
				match(INTERNAL);
				}
			}

			setState(170);
			match(TEMPLATE);
			setState(171);
			match(IDENTIFIER);
			setState(172);
			functionFrame();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantDefinitionContext extends ParserRuleContext {
		public TerminalNode CONSTANT() { return getToken(ScriptBlockParser.CONSTANT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ScriptBlockParser.IDENTIFIER, 0); }
		public TerminalNode EQUALS() { return getToken(ScriptBlockParser.EQUALS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DocumentationContext documentation() {
			return getRuleContext(DocumentationContext.class,0);
		}
		public TerminalNode INTERNAL() { return getToken(ScriptBlockParser.INTERNAL, 0); }
		public ConstantDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantDefinition; }
	}

	public final ConstantDefinitionContext constantDefinition() throws RecognitionException {
		ConstantDefinitionContext _localctx = new ConstantDefinitionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_constantDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOC_START) {
				{
				setState(174);
				documentation();
				}
			}

			setState(178);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INTERNAL) {
				{
				setState(177);
				match(INTERNAL);
				}
			}

			setState(180);
			match(CONSTANT);
			setState(181);
			match(IDENTIFIER);
			setState(182);
			match(EQUALS);
			setState(183);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormatterContext extends ParserRuleContext {
		public TerminalNode LESS_THAN() { return getToken(ScriptBlockParser.LESS_THAN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ScriptBlockParser.IDENTIFIER, 0); }
		public TerminalNode GREATER_THAN() { return getToken(ScriptBlockParser.GREATER_THAN, 0); }
		public ArgumentListContext argumentList() {
			return getRuleContext(ArgumentListContext.class,0);
		}
		public FormatterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formatter; }
	}

	public final FormatterContext formatter() throws RecognitionException {
		FormatterContext _localctx = new FormatterContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_formatter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			match(LESS_THAN);
			setState(186);
			match(IDENTIFIER);
			setState(187);
			match(GREATER_THAN);
			setState(188);
			argumentList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportLineContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(ScriptBlockParser.IMPORT, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(ScriptBlockParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ScriptBlockParser.IDENTIFIER, i);
		}
		public TerminalNode COLON() { return getToken(ScriptBlockParser.COLON, 0); }
		public ImportLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importLine; }
	}

	public final ImportLineContext importLine() throws RecognitionException {
		ImportLineContext _localctx = new ImportLineContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_importLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190);
			match(IMPORT);
			setState(191);
			match(IDENTIFIER);
			setState(192);
			match(COLON);
			setState(193);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
